--- a/templates/index.html
+++ b/templates/index.html
@@ -118,14 +118,14 @@
             <h3> Flight Price Prediction </h3>
 
             <ul class="socials">
-                <li><a target="_blank" href="https://github.com/dhananjay-bamane"><i class="fa fa-github"></i></a></li>
-                <li><a target="_blank" href="https://www.linkedin.com/in/dhananjaybamane/"><i
+                <li><a target="_blank" href="https://github.com/KunalDhavale"><i class="fa fa-github"></i></a></li>
+                <li><a target="_blank" href="https://www.linkedin.com/in/kunaldhavale/"><i
                             class="fa fa-linkedin-square"></i></a></li>
             </ul>
         </div>
 
         <div class="last">
-            <p>A Machine learning flight price prediction web-application, build with flask & deployed using Heroku</p>
+            <p>A Machine learning flight price prediction web-application, build with flask & deployed using Render</p>
         </div>
 
     </footer>
