--- a/templates/predict.html
+++ b/templates/predict.html
@@ -146,8 +146,8 @@
       <h3> Flight Price Prediction </h3>
 
       <ul class="socials">
-        <li><a target="_blank" href="https://github.com/dhananjay-bamane"><i class="fa fa-github"></i></a></li>
-        <li><a target="_blank" href="https://www.linkedin.com/in/dhananjaybamane/"><i class="fa fa-linkedin-square"></i></a></li>
+        <li><a target="_blank" href="https://github.com/KunalDhavale"><i class="fa fa-github"></i></a></li>
+        <li><a target="_blank" href="https://www.linkedin.com/in/kunaldhavale/"><i class="fa fa-linkedin-square"></i></a></li>
       </ul>
     </div>
 
